--- a/SGE/templates/cadEvento.html
+++ b/SGE/templates/cadEvento.html
@@ -6,16 +6,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Evento</title>
-
-    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Seu CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <div class="container mt-8">
-        <h2>Cadastro de Evento</h2>
 
         {% if sucesso %}
             <div class="alert alert-sucess">Evento salvo com sucesso!</div>
@@ -31,32 +26,32 @@
             {% csrf_token %}
             
             <div class="mb-3">
-                <label class="form-label">Nome do Evento</label>
+                <label for="{{ form.nome.id_for_label }}" class="form-label">Nome do Evento</label>
                 {% render_field form.nome class="form-control" %}
             </div>
 
             <div class="mb-3">
-                <label class="form-label">Descrição</label>
+                <label for="{{ form.descricao.id_for_label }}" class="form-label">Descrição</label>
                 {% render_field form.descricao class="form-control" %}
             </div>
 
             <div class="mb-3">
-                <label class="form-label">Hora Início</label>
+                <label for="{{ form.horaInicio.id_for_label }}" class="form-label">Hora Início</label>
                 {% render_field form.horaInicio class="form-control" %}
             </div>
 
             <div class="mb-3">
-                <label class="form-label">Hora Fim</label>
+                <label for="{{ form.horaFim.id_for_label }}" class="form-label">Hora Fim</label>
                 {% render_field form.horaFim class="form-control" %}
             </div>
 
             <div class="mb-3">
-                <label class="form-label">Data</label>
+                <label for="{{ form.data.id_for_label }}" class="form-label">Data</label>
                 {% render_field form.data class="form-control" %}
             </div>
 
             <div class="mb-3">
-                <label class="form-label">Local</label>
+                <label for="{{ form.local.id_for_label }}" class="form-label">Local</label>
                 {% render_field form.local class="form-control" %}
             </div>
 
