--- a/SGE/templates/cadEvento.html
+++ b/SGE/templates/cadEvento.html
@@ -6,8 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Evento</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    
 </head>
 <body>
     <div class="container mt-8">
@@ -35,14 +36,14 @@
                 {% render_field form.descricao class="form-control" %}
             </div>
 
-            <div class="mb-3">
+            <div class="mb-4">
                 <label for="{{ form.horaInicio.id_for_label }}" class="form-label">Hora Início</label>
-                {% render_field form.horaInicio class="form-control" %}
+                {% render_field form.horaInicio %}
             </div>
 
             <div class="mb-3">
                 <label for="{{ form.horaFim.id_for_label }}" class="form-label">Hora Fim</label>
-                {% render_field form.horaFim class="form-control" %}
+                {% render_field form.horaFim %}
             </div>
 
             <div class="mb-3">
