--- a/SGE/templates/login.html
+++ b/SGE/templates/login.html
@@ -1,22 +1,44 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - SGE</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/styleLogin.css' %}">
 </head>
-<body>
-    <h2>Login</h2>
+<body class="bg-light">
 
-    <form method="post">
-        {% csrf_token %}
-        <label for="username">Usuário: </label><br>
-        <input type="text" name="username" id="username" required><br><br>
+    <div class="container d-flex justify-content-center align-items-center min-vh-100">
+        <div class="card shadow p-4" style="width: 100%; max-width: 400px;">
+            <h3 class="text-center mb-4">Bem-vindo ao SGE</h3>
+            <form method="post">
+                
+                {% csrf_token %}
 
-        <label for="password">Senha:</label><br>
-        <input type="text" name="password" id="password" required> <br><br>
+                <div class="mb-3">
+                    <label for="email" class="form-label">E-mail</label>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="Digite seu e-mail" required>
+                </div>
 
-        <button type="submit">Entrar</button>
-    </form>
+                <div class="mb-3">
+                    <label for="senha" class="form-label">Senha</label>
+                    <input type="password" class="form-control" id="password" name="password" placeholder="Digite sua senha" required>
+                </div>
+
+                <div class="d-flex justify-content-between align-items-center mb-3">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="lembrar">
+                        <label class="form-check-label" for="lembrar">Lembrar de mim</label>
+                    </div>
+    
+                </div>
+
+                <button type="submit" class="btn btn-primary w-100">Entrar</button>
+            </form>
+        </div>
+    </div>
+
 </body>
 </html>
