--- a/SGE/templates/login.html
+++ b/SGE/templates/login.html
@@ -1,20 +1,25 @@
-{% load static %}
+{% load static%}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Login - SGE</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/styleLogin.css' %}">
 </head>
 <body class="bg-light">
 
-    <div class="container d-flex justify-content-center align-items-center min-vh-100">
-        <div class="card shadow p-4" style="width: 100%; max-width: 400px;">
-            <h3 class="text-center mb-4">Bem-vindo ao SGE</h3>
+    <div class="container min-vh-100 d-flex justify-content-center align-items-center">
+        <div class="card shadow-lg p-5 rounded-4" style="max-width: 500px; width: 150%;">
+            
+            <!-- Logo -->
+            <div class="text-center mb-4">
+                <img src="{% static 'images/logo.png' %}" alt="Logo SGE" class="img-fluid rounded-circle mx-auto d-block mb-4" style="width: 150px; height: 150px;" alt="Logo">
+                <h4 class="text-center mb-3">Bem-Vindo ao EventosFlower! </h4>
+            </div>
+
+            <!-- Formulário -->
             <form method="post">
-                
                 {% csrf_token %}
 
                 <div class="mb-3">
@@ -23,7 +28,7 @@
                 </div>
 
                 <div class="mb-3">
-                    <label for="senha" class="form-label">Senha</label>
+                    <label for="password" class="form-label">Senha</label>
                     <input type="password" class="form-control" id="password" name="password" placeholder="Digite sua senha" required>
                 </div>
 
@@ -32,7 +37,6 @@
                         <input class="form-check-input" type="checkbox" id="lembrar">
                         <label class="form-check-label" for="lembrar">Lembrar de mim</label>
                     </div>
-    
                 </div>
 
                 <button type="submit" class="btn btn-primary w-100">Entrar</button>
