Alterei cadParticipante e criei cadLocal

--- a/SGE/templates/cadEvento.html
+++ b/SGE/templates/cadEvento.html
@@ -14,7 +14,7 @@
     <div class="container mt-8">
 
         {% if sucesso %}
-            <div class="alert alert-sucess">Evento salvo com sucesso!</div>
+            <div class="alert alert-success">Evento salvo com sucesso!</div>
         {% endif %}
 
         {% if editando %}
