--- a/SGE/templates/listarLocal.html
+++ b/SGE/templates/listarLocal.html
@@ -8,6 +8,46 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
+
+    <nav class="navbar navbar-expand-lg shadow-sm py-3" style="background-color: #e0f0ff;" >
+    <div class="container-fluid justify-content-between">
+        <a class="navbar-brand fs-4 fw-bold" href="{% url 'inicio' %}">
+            <i class="bi bi-calendar-event"></i> EventosFlower - Organizador
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse justify-content-between" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'listarEventos' %}">
+                        <i class="bi bi-calendar3"></i> Eventos
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'listarParticipante' %}">
+                        <i class="bi bi-people-fill"></i> Participantes
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'listarLocal' %}">
+                        <i class="bi bi-geo-alt-fill"></i> Locais
+                    </a>
+                </li>
+            </ul>
+
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="btn btn-outline-danger fs-5" href="{% url 'logout' %}">
+                        <i class="bi bi-box-arrow-right"></i> Sair
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
     <div class="container mt-5">
         <div class="d-flex justify-content-between align-items-center mb-4">
             <h2 class="text-center w-100 text">Locais Cadastrados</h2>
@@ -16,14 +56,17 @@
 
         <div class="card shadow-sm rounded-4">
             <div class="card-body">
-                {% if local %}
+                {% if locais %}
+
                 <div class="table-responsive">
-                    <table class="table-light">
-                        <tr>
-                            <th>Nome do Local</th>
-                            <th>Endereço</th>
-                            <th>Capacidade</th>
-                        </tr>
+                    <table class="table table-bordered table-striped">
+                        <thead class="table-light">
+                            <tr>
+                                <th>Nome do Local</th>
+                                <th>Endereço</th>
+                                <th>Capacidade</th>
+                                <th>Ações</th>
+                            </tr>
                         </thead>
                         <tbody>
                             {% for local in locais%}
@@ -32,8 +75,8 @@
                                 <td>{{local.endereco}}</td>
                                 <td>{{local.capacidade}}</td>
                                 <td>
-                                    <a href="{% url 'editarLocal' evento.id %}" class="btn btn-sm btn-primary">Editar</a>
-                                    <a href="{% url 'excluirLocal' evento.id %}" class="btn btn-sm btn-danger" onclick="return confirm('Tem certeza que deseja excluir?')">Excluir</a>
+                                    <a href="{% url 'editarLocal' local.id %}" class="btn btn-sm btn-primary">Editar</a>
+                                    <a href="{% url 'excluirLocal' local.id %}" class="btn btn-sm btn-danger" onclick="return confirm('Tem certeza que deseja excluir?')">Excluir</a>
                                 </td>
                             </tr>
                             {% endfor %}
