--- a/SGE/templates/telaPrincipal.html
+++ b/SGE/templates/telaPrincipal.html
@@ -1,16 +1,14 @@
-{% load static %}
-{% load widget_tweaks %}
+{% load static%}
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro de Participante</title>
-    <link rel="stylesheet" href="{% static 'css/styleCadE.css' %}">
+    <title>Painel do Organizador</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
-<body>
+<body class="bg-light">
 
     <nav class="navbar navbar-expand-lg shadow-sm py-3" style="background-color: #e0f0ff;" >
     <div class="container-fluid justify-content-between">
@@ -51,54 +49,14 @@
     </div>
 </nav>
 
-    <div class="container mt-8">
-
-        {% if sucesso %}
-            <div class="alert alert-success">Participante salvo com sucesso!</div>
-        {% endif %}
-
-        {% if editando %}
-            <h2>Editar Participante</h2>
-        {% else %}
-            <h2>Cadastrar Participante</h2>
-        {% endif %}
-
-        <form method="post">
-            {% csrf_token %}
-            
-            <div class="mb-3">
-                <label for="{{ form.nome.id_for_label }}" class="form-label">Nome do Participante</label>
-                {% render_field form.nome class="form-control" %}
-            </div>
-
-            <div class="mb-3">
-                <label for="{{ form.email.id_for_label }}" class="form-label">E-Mail</label>
-                {% render_field form.email class="form-control" %}
-            </div>
-
-            <div class="mb-3">
-                <label for="{{ form.telefone.id_for_label }}" class="form-label">Telefone</label>
-                {% render_field form.telefone class="form-control" id="id_telefone" %}
-                
-            </div>
-
-            <button type="submit" class="btn btn-primary">
-                {% if editando %} Atualizar{% else %} Salvar{% endif %}
-            </button>
-            <a href="{% url 'listarParticipante'%}" class="btn btn-secondary">Voltar</a>
-        </form>
+    <div class="container mt-5">
+        <div class="text-center">
+            <h1>Bem-Vindo, Organizador!</h1>
+            <p class="lead">Use o menu acima para gerenciar o sistema.</p>
+            <img src="{% static 'images/dashboard.png' %}" alt="Painel" class="'img-fluid mt-4" style="max-height: 300;">
+        </div>
     </div>
 
-
-
-<!--CODIGO DA MASCARA DO TELEFONE -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/inputmask/5.0.7/jquery.inputmask.min.js"></script>
-
-<script>
-    $(document).ready(function(){
-        $('#id_telefone').inputmask('(99) 99999-9999', {"placeholder":"(__) _____-____"});
-    });
-</script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
