--- a/SGE/templates/cadEvento.html
+++ b/SGE/templates/cadEvento.html
@@ -24,17 +24,17 @@
         <div class="collapse navbar-collapse justify-content-between" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'listarEventos' %}">
+                    <a class="nav-link {% if request.resolver_match.url_name == 'listarEventos' %}active-link{% endif %}"  href="{% url 'listarEventos' %}">
                         <i class="bi bi-calendar3"></i> Eventos
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'listarParticipante' %}">
+                    <a class="nav-link {% if request.resolver_match.url_name == 'listarParticipante' %}fs-5 fw-bold{% endif %}" href="{% url 'listarParticipante' %}">
                         <i class="bi bi-people-fill"></i> Participantes
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'listarLocal' %}">
+                    <a class="nav-link {% if request.resolver_match.url_name == 'listarLocal' %}fs-5 fw-bold{% endif %}" href="{% url 'listarLocal' %}">
                         <i class="bi bi-geo-alt-fill"></i> Locais
                     </a>
                 </li>
