--- a/SGE/templates/login.html
+++ b/SGE/templates/login.html
@@ -23,8 +23,8 @@
                 {% csrf_token %}
 
                 <div class="mb-3">
-                    <label for="email" class="form-label">E-mail</label>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="Digite seu e-mail" required>
+                    <label for="username" class="form-label">E-mail</label>
+                    <input type="username" class="form-control" id="username" name="username" placeholder="Digite seu e-mail" required>
                 </div>
 
                 <div class="mb-3">
